--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.7.2",
+		"axios": "^1.8.1",
 		"express": "^4.21.2",
 		"knex": "^3.1.0",
+		"pdfkit": "^0.16.0",
 		"react": "^19.0.0",
 		"react-bootstrap": "^2.10.9",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^7.2.0",
-		"sqlite3": "^5.1.7"
+		"sqlite3": "^5.1.7",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
