--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.7.2",
 		"axios": "^1.8.1",
+		"cors": "^2.8.5",
 		"exceljs": "^4.4.0",
 		"express": "^4.21.2",
 		"knex": "^3.1.0",
