--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-bootstrap": "^2.10.9",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^7.2.0",
+		"recharts": "^2.15.1",
 		"sqlite3": "^5.1.7",
 		"xlsx": "^0.18.5"
 	},
